[package]
name = "p31"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["crates/*"]

[dependencies]
bevy = "*"
cameras = { path = "crates/cameras" }
dolly = { path = "crates/dolly" }
meshes = { path = "crates/meshes" }
tween = { path = "crates/tween" }

[dev-dependencies]
bevy-inspector-egui = "0.18"
