[package]
name = "p31"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
bevy = "*"
cameras = { path = "crates/cameras" }
dolly = { path = "crates/dolly" }
meshes = { path = "crates/meshes" }
tween = { path = "crates/tween" }

[dev-dependencies]
bevy-inspector-egui = "0.18"

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
bevy_rapier3d = { git = 'https://github.com/dimforge/bevy_rapier' }
