[package]
name = "p31"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
bevy = "*"
cameras = { path = "crates/cameras" }
dolly = { path = "crates/dolly" }
meshes = { path = "crates/meshes" }
tween = { path = "crates/tween" }
debug_text = { path = "crates/debug_text" }

[dev-dependencies]
bevy-inspector-egui = "0.19"

[profile.dev.package."*"]
opt-level = 3

# [patch.crates-io]
# proc-macro2 = { git = 'https://github.com/dtolnay/proc-macro2' }
