[package]
name = "fps_controller"
version = "0.0.1"
edition = "2021"
description = ""
readme = "README.md"

[dependencies]
bevy = "0.12"
rand = "*"
bevy_rapier3d = "0.22.0"
valve_maps = { path = "../valve_maps" }
debug_text = { path = "../debug_text" }
egui_helper = { path = "../egui_helper" }
bevy-tnua = { version = "0.2", features = ["rapier_3d"] }
bevy_prototype_debug_lines = { version = "0.10", features = ["3d"] }
leafwing-input-manager = "*"

[dev-dependencies]
cameras = { path = "../cameras" }
