[package]
name = "valve_maps"
version = "0.0.1"
edition = "2021"
description = "A parser for the `.map` file format used by Quake 1 & 2 as well as Half-Life 1, implemented using the nom parsing framework."
readme = "README.md"

[dependencies]
bevy = "0.11"
nom = "5.1.2"
nom-fields = "0.1.1"
bevy_rapier3d = "0.22.0"

[dev-dependencies]
cameras = { path = "../cameras" }
bevy-inspector-egui = "0.19"
